# past_action

./: .gitignore  .gitmodules  LICENSE  README.md  conda_env.yaml  ordered_lattice_quantization.md  pyproject.toml  test_zhill.py
analysis_scripts/: analysis_token.py  analyze_entropy.py  analyze_reconstruction_quality.py  codebook_utilization.py  compare_oat_vs_enriched.py  compare_past_conditions.py  compare_rollout_mse_sim.py  diagnose_latent_dis.py  diagnose_per_pos_mse.py  diagnose_polar_policy.py  eval_tokenizer_metrics.py  polar_analysis.py
analysis_scripts/entropy_results/: entropy_summary.csv
analysis_scripts/oat_vs_enriched_results/: per_step_mse.csv
analysis_scripts/past_condition_results/: per_step_mse.csv
analysis_scripts/phase1_results/: phase1_results.json
analysis_scripts/rollout_mse_results/: per_chunk_position_mse_enriched.csv  per_chunk_position_mse_oat.csv
entropy_results_old/: entropy_summary.csv
oat/common/: hydra_util.py  pytorch_util.py  seq_sampler.py  video_recorder.py
oat/config/: train_binpolicy.yaml  train_bintok.yaml  train_diffpolicy.yaml  train_fastpolicy.yaml  train_fasttok.yaml  train_maskgitpolicy.yaml  train_oatpolicy.yaml  train_oattok.yaml  (+21 more)
past_condition_results/: per_step_mse.csv
past_condition_results_past/: per_step_mse.csv
reconstruction_quality_results/: per_step_mse.csv
rollout_mse_results/: per_timestep_mse.csv  summary.csv
scripts/: compose_libero_multitask_dataset.py  convert_libero_dataset.py  convert_mimicgen_to_zarr.py  eval_policy_sim.py  merge_data.py  phase1_real_data.py  run_workspace.py
(+106 files in other folders)
